--- a/Style/main.css
+++ b/Style/main.css
@@ -655,7 +655,7 @@ body {
   background-color: var(--white);
   margin-top: var(--margin-E);
   border-radius: var(--border-radius-D);
-  height: calc(var(--icon-svg) + 2*var(--padding-F) + 2px);
+  height: calc(var(--icon-svg) + 2*var(--padding-E) + 2px);
   transition: var(--transition);
   box-shadow: var(--box-shadow);
   overflow: hidden;
