--- a/Style/main.less
+++ b/Style/main.less
@@ -274,7 +274,7 @@ body {
 .scroll-in-table {
     overflow: hidden;
     flex: 1;
-    height: calc(100% - 2*var(--padding-F))
+    height: calc(100% - 44px - 1px - 2*var(--padding-F));
 }
 
 //card
