--- a/Style/main.less
+++ b/Style/main.less
@@ -11,6 +11,11 @@
     --gray-50: #f1f1f1;
     --gray-10: #f4f4f4;
     --air-50: #00AC78;
+    --air-100: #FFD05C;
+    --air-150: #F17C00;
+    --air-200: #FF4123;
+    --air-300: #CB29FF;
+    --air-301: #822000;
     --white-20: #ffffff20;
     --color-card-3-1: #E9EFFF;
     --color-card-3-2: #bcc7ff;
@@ -892,6 +897,80 @@ body {
     }
 }
 
+//time-slider
+.time-slider {
+    display: flex;
+    padding: var(--margin-H);
+    background-image: linear-gradient(360deg, #cad2d3, #cad2d300);
+    position: fixed;
+    bottom: 0;
+    left: calc(var(--left-menu) + var(--margin-H));
+    width: calc(100% - var(--left-menu) - 3*var(--margin-H));
+    z-index: 2;
+    transition: var(--transition-1);
+
+    .slider-container {
+        display: flex;
+        align-items: center;
+        flex: 1;
+        .play-btn {
+            display: flex;
+            background-color: var(--white);
+            border-radius: var(--border-radius-X);
+            box-shadow: var(--box-shadow);
+            overflow: hidden;
+        }
+        .slider {
+            flex: 1;
+        }
+    }
+
+
+    .note {
+        display: flex;
+        align-items: center;
+        .note-range {
+            display: flex;
+            flex-direction: column;
+            width: var(--col-24);
+            font-size: var(--font-size-10);
+            color: var(--primary-text);
+            .color {
+                margin: var(--margin-C) 0;
+                height: var(--padding-B);
+                width: 100%;
+            }
+            .number,.transperent {
+                width: 100%;
+                height: var(--margin-F);
+            }
+            .range01 {
+                background-color: var(--air-50);
+            }
+            .range02 {
+                background-color: var(--air-100);
+            }
+            .range03 {
+                background-color: var(--air-150);
+            }
+            .range04 {
+                background-color: var(--air-200);
+            }
+            .range05 {
+                background-color: var(--air-300);
+            }
+            .range06 {
+                background-color: var(--air-301);
+            }
+        }
+
+    }
+}
+.full-width {
+    width: calc(100% - 2*var(--margin-H)) !important;
+    transition: var(--transition-1);
+    left: 0;
+}
 //filter
 .filter {
     display: flex;
