--- a/Style/main.less
+++ b/Style/main.less
@@ -294,7 +294,7 @@ body {
 .content-tab {
     display: flex;
     flex-direction: column;
-    overflow: hidden auto;
+    overflow: hidden overlay;
     flex: 1;
 }
 
@@ -593,7 +593,7 @@ body {
     }
 
     .content-table {
-        overflow: hidden auto;
+        overflow: hidden overlay;
         flex: 1;
     }
 
