--- a/Style/main.css
+++ b/Style/main.css
@@ -5,6 +5,7 @@
   --primary-color-hover: #003fb4;
   --gray: #606781;
   --gray-300: #b4b4b4;
+  --gray-200: #d5d5d5;
   --gray-100: #E2E2E2;
   --gray-80: #e7e7e7;
   --gray-50: #f1f1f1;
@@ -36,9 +37,11 @@
   --border-radius-D: 4px;
   --border-radius-E: 6px;
   --border-radius-F: 8px;
+  --border-radius-G: 16px;
   --border-radius-X: 100px;
   --border-A: 1px solid var(--gray-50);
   --border-B: 1px solid var(--white-20);
+  --border-C: 1px solid var(--gray-200);
   --white: #fff;
   --padding-A: 2px;
   --padding-B: 4px;
@@ -60,8 +63,11 @@
   --margin-A: 1px;
   --scale-zoom: scale(0.9);
   --font-size-input: 12px;
+  --font-size-B: 16px;
+  --font-size-A: 14px;
   --font-size-10: 10px;
   --line-height-input: 16px;
+  --line-height-input-login: 24px;
   --transition: all ease-in 0.2s;
   --transition-1: all ease-in 0.1s;
   --box-shadow: 0px 20px 70px rgba(0, 0, 0, 0.2);
@@ -712,7 +718,6 @@ body {
 .time-slider {
   display: flex;
   padding: var(--margin-H);
-  background-image: linear-gradient(360deg, #cad2d3, #cad2d300);
   position: fixed;
   bottom: 0;
   left: calc(var(--left-menu) + var(--margin-H));
@@ -779,6 +784,15 @@ body {
   transition: var(--transition-1);
   left: 0;
 }
+.overlay-bottom {
+  height: 100px;
+  width: calc(100%) !important;
+  background-image: linear-gradient(360deg, #cad2d3, #cad2d300);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+}
 .filter {
   display: flex;
   margin: var(--margin-H);
@@ -796,6 +810,164 @@ body {
 .filter > :last-child,
 .filter > :first-child {
   margin: 0;
+}
+.login-container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.login-container > div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: var(--left-menu);
+}
+.login-container > div > * {
+  margin-bottom: var(--margin-I);
+}
+.login-container > div .title-login {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.login-container > div .title-login .title {
+  font-size: 24px;
+  font-weight: 600;
+  margin-bottom: var(--margin-D);
+  display: flex;
+  align-items: center;
+}
+.login-container > div .title-login .title :first-child {
+  flex: 1;
+}
+.login-container > div .title-login .discription {
+  font-size: var(--font-size-input);
+  display: flex;
+  align-items: center;
+  line-height: 148%;
+  color: var(--gray);
+}
+.login-container > div .tab-login {
+  display: flex;
+}
+.login-container > div .tab-login .active {
+  background-color: var(--primary-text);
+}
+.login-container > div .form-login {
+  width: calc(100% - 2*var(--margin-G));
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.login-container > div .input-submit {
+  width: calc(100%);
+  font-size: var(--font-size-A);
+  background-color: var(--primary-color);
+  color: var(--white);
+  border-radius: var(--border-radius-X);
+  font-weight: 400;
+  line-height: var(--line-height-input-login);
+  border: none;
+  padding: var(--padding-E);
+  margin: 0;
+  outline: unset;
+  cursor: pointer;
+}
+.login-container > div .input-submit:hover {
+  background-color: var(--primary-color-hover) !important;
+  color: var(--white) !important;
+  transition: var(--transition-1);
+}
+.login-container > div .input-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  border: var(--border-C);
+  border-radius: var(--border-radius-G);
+  margin-bottom: var(--margin-I);
+}
+.login-container > div .input-container > div {
+  border-bottom: var(--border-C);
+}
+.login-container > div .input-container > *:last-child {
+  border: none;
+}
+.login-container > div .input {
+  display: flex;
+  align-items: center;
+  padding: var(--padding-H);
+}
+.login-container > div .input > div {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+.login-container > div .input > div .input-label {
+  font-size: var(--font-size-input);
+  display: flex;
+  align-items: center;
+  line-height: 148%;
+  color: var(--gray);
+  margin-bottom: var(--margin-B);
+  user-select: none;
+}
+.login-container > div .input > div input {
+  flex: 1;
+  font-size: var(--font-size-B);
+  font-weight: 400;
+  line-height: var(--line-height-input-login);
+  border: none;
+  padding: 0;
+  margin: 0;
+  outline: unset;
+}
+.login-container > div .login-information {
+  display: flex;
+  font-size: var(--font-size-input);
+  align-items: center;
+  line-height: 148%;
+  color: var(--gray);
+}
+.login-container > div .login-information .link {
+  margin-left: var(--margin-C);
+  color: var(--primary-color);
+}
+.login-container > div .more-option {
+  display: flex;
+  align-items: center;
+}
+.login-container > div .more-option .icon {
+  background-color: var(--gray-100);
+  border-radius: var(--border-radius-X);
+}
+.login-container > div .more-option > div {
+  margin-left: var(--margin-F);
+}
+.login-container > div .more-option > *:first-child {
+  margin: 0;
+}
+.login-container > div .login-alert {
+  padding: var(--padding-F);
+  width: calc(100% - 2*var(--padding-F));
+  font-size: var(--font-size-input);
+  border-radius: var(--border-radius-X);
+  background-color: #f100000d;
+  border: 1px solid var(--air-200);
+  display: flex;
+  align-items: center;
+  color: var(--air-200);
+  margin-bottom: var(--margin-I);
+}
+.login-container > div .login-alert .icon-input {
+  margin-right: var(--margin-F);
+  fill: currentColor;
+}
+.login-container > div .icon-input {
+  width: 16px;
+  height: 16px;
 }
 .apexcharts-canvas .apexcharts-text {
   font-size: 10px;
