--- a/Style/main.less
+++ b/Style/main.less
@@ -1212,7 +1212,13 @@ body {
         }
     }
 }
-
+//logo {
+.logo {
+    position: fixed;
+    top: var(--padding-G);
+    right: calc(4*var(--padding-H));
+    z-index: 1;
+}
 //chart
 .apexcharts-canvas .apexcharts-text {
     font-size: 10px;
